crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_not_generate_conflicting_props_identifiers.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useComputed$, useTask$ } from "@qwik.dev/core";

export default component$(({ color, ...props }) => {
  useComputed$(() => color);

  useTask$(() => {
    props.checked;
  });

  return "hi";
});

=== test.js ===
import { _restProps } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useComputedQrl } from "@qwik.dev/core";
import { _captures } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
const test_component_useComputed_PYU291PvidQ = () => {
  const _rawProps = _captures[0];
  return _rawProps.color;
};
const test_component_useTask_jewzFYh3XmQ = () => {
  const props = _captures[0];
  props.checked;
};
const test_component_LUXeXe0DQrg = (_rawProps) => {
  const props = _restProps(_rawProps, ["color"]);
  useComputedQrl(
    /* @__PURE__ */ inlinedQrl(
      test_component_useComputed_PYU291PvidQ,
      "test_component_useComputed_PYU291PvidQ",
      [_rawProps],
    ),
  );
  useTaskQrl(
    /* @__PURE__ */ inlinedQrl(
      test_component_useTask_jewzFYh3XmQ,
      "test_component_useTask_jewzFYh3XmQ",
      [props],
    ),
  );
  return "hi";
};
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl(test_component_LUXeXe0DQrg, "test_component_LUXeXe0DQrg"),
);

=== DIAGNOSTICS ===

[]
