crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_not_move_over_side_effects.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
export const $promoteToRoot$ = (ref: SeenRef) => {
  const path = $getObjectPath$(ref) as string;
  // should stay before the push
  const idx = roots.length;
  roots.push(new BackRef(path));
  ref.$parent$ = null;
  ref.$index$ = idx;
  return idx;
};

=== test.js ===
export const $promoteToRoot$ = (ref) => {
  const path = $getObjectPath$(ref);
  // should stay before the push
  const idx = roots.length;
  roots.push(new BackRef(path));
  ref.$parent$ = null;
  ref.$index$ = idx;
  return idx;
};

=== DIAGNOSTICS ===

[]
