crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_not_transform_events_on_non_elements.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, $ } from "@qwik.dev/core";
import { CustomComponent } from "./custom-component";
import { AnotherComponent } from "./another-component";

export const Greeter = component$(() => {
  return (
    <div>
      <CustomComponent onClick$={() => {}} />
      {array.map((item) => (
        <AnotherComponent onClick$={() => {}} />
      ))}
    </div>
  );
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Greeter_component_XXXXXXXXXXXX");
export const Greeter = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Greeter_component_XXXXXXXXXXXX"),
);

=== test.tsx_Greeter_component_XXXXXXXXXXXX.tsx === (ENTRY)
import { AnotherComponent } from "./another-component";
import { CustomComponent } from "./custom-component";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_Greeter_component_div_CustomComponent_onClick_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_Greeter_component_div_AnotherComponent_onClick_XXXXXXXXXXXX");
export const Greeter_component_XXXXXXXXXXXX = () => {
  return (
    <div>
      <CustomComponent
        onClick$={
          /* @__PURE__ */ qrl(
            i_XXXXXXXXXXXX,
            "Greeter_component_div_CustomComponent_onClick_XXXXXXXXXXXX",
          )
        }
      />
      {array.map((item) => (
        <AnotherComponent
          onClick$={
            /* @__PURE__ */ qrl(
              i_XXXXXXXXXXXX,
              "Greeter_component_div_AnotherComponent_onClick_XXXXXXXXXXXX",
            )
          }
        />
      ))}
    </div>
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Greeter_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Greeter_component_div_CustomComponent_onClick_XXXXXXXXXXXX.tsx === (ENTRY)
export const Greeter_component_div_CustomComponent_onClick_XXXXXXXXXXXX = () => {};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_CustomComponent_onClick_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_CustomComponent_onClick",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Greeter_component_div_CustomComponent_onClick_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "Greeter_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== test.tsx_Greeter_component_div_AnotherComponent_onClick_XXXXXXXXXXXX.tsx === (ENTRY)
export const Greeter_component_div_AnotherComponent_onClick_XXXXXXXXXXXX = () => {};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_AnotherComponent_onClick_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_AnotherComponent_onClick",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Greeter_component_div_AnotherComponent_onClick_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "Greeter_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
